--- a/requirements.txt
+++ b/requirements.txt
@@ -182,3 +182,10 @@ python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "4.0
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0" \
     --hash=sha256:1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926 \
     --hash=sha256:8abb2f1d86890a2dfb989f9a77cfcfd3e47c2a354b01111771326f8aa26e0254
+
+mongoengine~=0.28.2
+Scrapy~=2.11.1
+itemadapter~=0.8.0
+redis~=5.0.3
+pika~=1.3.2
+Faker~=24.3.0
